[project]
name = "unit-convertor"
version = "0.1.0"
authors = [
    { name = "Samreen Saif", email = "samreensaif81@gmail.com" },
]
description = "A universal unit converter application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "google-generativeai",
    "python-dotenv",
    "pandas",
]

[project.scripts]
unit-convertor = "unit_convertor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/samreensaif/streamlit-unit-convertor"
"Bug Tracker" = "https://github.com/samreensaif/streamlit-unit-convertor/issues"
